# hypermap_msgs

./: CMakeLists.txt  README.md  package.xml
msg/: HypermapMetaData.msg  LayerMetaData.msg  SemanticMapUpdate.msg  SemanticObject.msg
srv/: GetIntAtPoint.srv  GetIntsByArea.srv  GetLocationsByInt.srv  GetLocationsByString.srv  GetSemanticByArea.srv  GetSemanticByString.srv  GetStringAtPoint.srv  GetStringsByArea.srv
